2006-09-21  Claes NÃ¤stÃ©n  <me{@}pekdon{.}net>

	* src/PixmapHandler.cc (PixmapHandler::returnPixmap): 
	Use map for pixmap handler instead of list.

2006-09-11  Claes Nästén  <me{@}pekdon{.}net>

	* src/ActionHandler.cc (ActionHandler::findClientFromTitle): 
	Updated FindClient action to match against the visible title and not
	the Client set one.

	* src/RegexString.cc (RegexString::parse_match): 
	Updated parse match to support parsing of // style regular expressions
	having flags set. Currently only i flag supported. This type of
	expressions is currently only possible on the FindClient action.
	
	
2006-09-07  Claes Nästén  <me{@}pekdon{.}net>

	* src/Config.cc (Config::parseAction): 
	Updated ShowCmdDialog action to support parameter setting initial
	value. Useful together with action such as GotoClientID binding
	a keybinding to ShowCmdDialog GotoClientID for quick navigation.

	* src/ActionHandler.cc (ActionHandler::actionGotoClientID): 	
	Added GotoClientID action which goes to and focuses client with
	ID.

	* src/PDecor.cc: 
	Added boolean option ShowClientID under the Screen section of the
	main config file. This enable/disable display of Client ID in
	titles. 

2006-09-06  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::Client):
	Moved the Client list to Client. Added clientid list to Client so that
	it is possible to keep track of Client ids, preparation of number
	based navigation.

	* src/PDecor.hh (PDecor::TitleItem): 
	Extend PDecor::TitleItem with information to include client id.

	* src/Frame.cc (Frame::Frame): 
	Moved the Frame list to Frame.

2006-09-03  Claes Nästén  <me{@}pekdon{.}net>

	* src/CmdDialog.cc (CmdDialog::bufKill): 
	Added action ClearFromCursor for CmdDialog to erase characters from
	current cursor position to the end of line.

2006-08-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/Frame.cc (Frame): 
	Moved tagged frame information to Frame.

2006-08-30  Claes Nästén  <me{@}pekdon{.}net>
